resource.tf
# Create a VPC
resource "aws_vpc" "example" {
  cidr_block = "10.0.0.0/16"
}

resource "aws_vpc" "development-vpc" {
  cidr_block = "10.20.0.0/16"
}

resource "aws_subnet" "dev-aws_subnet-1" {
  vpc_id            = aws_vpc.development-vpc.id
  cidr_block        = "10.20.1.0/24"
  availability_zone = "us-east-1a"
}

# data "aws_vpc" "existing_vpc" {

# }

variable "vpc_cidr_blocks" {}
variable "subnet_cidr_block" {}
variable "avail_zone" {}
variable "env_prefix" {}

resource "aws_vpc" "myapp-vpc" {
  cidr_block = var.vpc_cidr_blocks
  tags = {
    Name : "{var.env_prefix}-vpc"
  }
}
resource "aws_subnet" "myapp-subnet-1" {
  vpc_id            = aws_vpc.myapp-vpc.id
  cidr_block        = var.subnet_cidr_block
  availability_zone = var.avail_zone
  tags = {
    Name : "{var.env_prefix}-subnet-1"
  }
}
#Terraform is smart enough to know what order to create resources
resource "aws_route_table" "myapp-route-table" {
  vpc_id = aws_vpc.myapp-vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.myapp-igw.id
  }
}

resource "aws_internet_gateway" "myapp-igw" {
  vpc_id = aws_vpc.myapp-vpc.id
}
